# FinanceBro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: api.py  cli.py
src/config/: config.py
src/decomposer/: __init__.py  decomposer.py
src/excel/: WACC_DCF_template.xlsx
src/financebro/: __init__.py  financebro.py
src/frontend/: index.html  script.js  style.css
src/frontend/static/: script.js  style.css
src/frontend/templates/: index.html
src/interns/: __init__.py  base_specialization.py  economic_analyst_specialization.py  excel_specialization.py  file_manager_specialization.py  financial_analyst_specialization.py  generalist_specialization.py  intern.py  prompt_templates.py  research_specialization.py  specialization.py  status.py  step.py  vector_store_manager_specialization.py
src/llmopenai/: __init__.py  llmopenai.py
src/plugins/: analyze_company.py  create_new_excel.py  create_new_sheet.py  create_vector_store_from_pdfs.py  csv_to_excel.py  exit.py  export_variable.py  extract_information_from_webpage.py  find_ticker.py  get_active_excel_and_sheet.py  get_balance_sheet_to_csv.py  get_cash_flow_statement_to_csv.py  get_income_statement_to_csv.py  get_news_sentiment_to_txt.py  get_reddit_news_to_txt.py  get_stock_close_price_to_csv.py  get_stock_open_price_to_csv.py  get_text_from_website.py  get_website_content.py  google_search.py  list_files.py  open_excel.py  open_file.py  plugin.py  query_vector_store.py  read_file.py  read_value.py  search_econ_literature.py  set_color.py  set_value.py  shell_plugin.py  switch_excel.py  switch_sheet.py  templates.py  write_file.py
