[tool.poetry]
name = "src"
version = "0.1.0"
description = "Autonomous Agent for Finance"
authors = ["Jan Komisarczyk <jan.komisarczyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
financebro = 'src.cli:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
openai = "^0.28.1"
coloredlogs = "^15.0.1"
python-statemachine = "^2.1.2"
pydantic = "^2.4.2"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.324"
mistune = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
