[tool.poetry]
name = "src"
version = "0.1.0"
description = "Autonomous Agent for Finance"
authors = ["Jan Komisarczyk <jan.komisarczyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
financebro = 'src.cli:main'

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
coloredlogs = "^15.0.1"
python-statemachine = "^2.1.2"
pydantic = "^2.4.2"
beautifulsoup4 = "^4.12.2"
langchain = "^0.0.324"
mistune = "3.0.1"
openai = "^1.3.2"
pandas = "^2.1.3"
selenium = "^4.15.2"
praw = "^7.7.1"
yfinance = "^0.2.32"
xlwings = "^0.30.12"
yahoo-fin = "^0.8.9.1"
numpy-financial = "^1.0.0"
mip = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
